// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`div instruction compiler > emits F32_DIV for float32 operands 1`] = `
{
  "byteCode": [
    149,
  ],
  "stack": [
    {
      "isNonZero": false,
      "kind": "value",
      "valueType": "float",
    },
  ],
}
`;

exports[`div instruction compiler > emits F64_DIV for float64 operands 1`] = `
{
  "byteCode": [
    163,
  ],
  "stack": [
    {
      "isNonZero": false,
      "kind": "value",
      "valueType": "float64",
    },
  ],
}
`;

exports[`div instruction compiler > emits I32_DIV_S for integer operands 1`] = `
{
  "byteCode": [
    109,
  ],
  "stack": [
    {
      "isNonZero": false,
      "kind": "value",
      "valueType": "int",
    },
  ],
}
`;
